fixed alignment issues

--- a/themes/default/assets/css/core.css
+++ b/themes/default/assets/css/core.css
@@ -138,11 +138,15 @@ h5.page-title{
 }
 /* common/topmenu */
 .topmenu{
-    font-weight: bold;
-    height: 7vh;
+    /*font-weight: bold;*/
     color: var(--sub-theme-color);
     background-color: var(--white);
-    padding: 1rem;
+    padding: 15px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--white);
+    background: #171a23;
 }
 
 .topmenu .title{
@@ -155,21 +159,19 @@ h5.page-title{
 
 .topmenu .messages{
     cursor: pointer;
-    padding-right: 2rem;
 }
 
 .topmenu .notifications{
     cursor: pointer;
-    padding-right: 2rem;
 }
 
 .topmenu .settings{
     cursor: pointer;
-    padding-right: 3rem;
 }
 
 .topmenu i{
-    font-size: 2rem;
+    font-size: 20px;
+    margin-left: 15px;
 }
 
 .topmenu .notifications p{
